Added Mongo Repository and Mongo DB on Docker